--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,12 @@ project(igel_compiler)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build/libs)
 
-add_executable(igel src/main.cpp)
+add_executable(igel
+        src/main.cpp
+        src/tokenizer.cpp
+        src/tokenizer.h
+        src/parsed.h
+        src/CompilerInfo/InfoParser.cpp
+        src/CompilerInfo/InfoParser.h
+)
 set_target_properties(igel PROPERTIES OUTPUT_NAME "igel.exe")
