Added Staticly sized arrays,Moved to LLVM

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,48 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.20.0)
 
 project(igel_compiler)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build/libs)
+set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
 
 add_executable(igel
         src/main.cpp
         src/tokenizer.cpp
         src/tokenizer.h
-        src/parsed.h
+        #src/parsed.h
         src/CompilerInfo/InfoParser.cpp
         src/CompilerInfo/InfoParser.h
         src/CompilerInfo/OptionsParser.h
         src/CompilerInfo/OptionsParser.cpp
+        src/langMain/codeGen/Generator.h
+        src/langMain/codeGen/Generator.cpp
+        src/langMain/codeGen/types.cpp
 )
 set_target_properties(igel PROPERTIES OUTPUT_NAME "igel.exe")
+
+#This is the LLVM Dependency section
+
+find_package(LLVM REQUIRED CONFIG)
+
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+
+# Set your project compile flags.
+# E.g. if using the C++ header files
+# you will need to enable C++11 support
+# for your compiler.
+
+add_definitions(${LLVM_DEFINITIONS_LIST})
+include_directories(${LLVM_INCLUDE_DIRS})
+separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
+
+# Now build our tools
+
+# Find the libraries that correspond to the LLVM components
+# that we wish to use
+llvm_map_components_to_libnames(llvm_libs support core irreader)
+
+# Link against LLVM libraries
+target_link_libraries(igel /usr/lib/libLLVM-16.so)
+#target_link_libraries(igel ${llvm_libs})
