Added full support for compiler library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,14 +48,8 @@ llvm_map_components_to_libnames(llvm_libs support core irreader)
 target_link_libraries(igel /usr/lib/libLLVM-16.so)
 #target_link_libraries(igel ${llvm_libs})
 
-SET(libSrc
-        srcLib/Array.h)
 SET(libSrcPr
-        srcLib/Array.cpp)
+         srcLib/Array.cpp)
 
-add_library(libIg SHARED ${libSrc} ${libSrcPr})
+add_library(libIg STATIC ${libSrcPr})
 set_target_properties(libIg PROPERTIES OUTPUT_NAME "igc")
-
-INSTALL(TARGETS libIg
-        LIBRARY DESTINATION /libbin
-        PUBLIC_HEADER DESTINATION /libinclude)
