Added type casting, Exception framework, internal exception throwing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 3.20.0)
 
 project(igel_compiler)
 
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build/libs)
 set_property(GLOBAL PROPERTY TARGET_SUPPORTS_SHARED_LIBS TRUE)
 
@@ -25,6 +26,8 @@ add_executable(igel
         src/langMain/parsing/Indexer.h
         src/langMain/parsing/PreParser.cpp
         src/langMain/parsing/PreParser.h
+        src/exceptionns/GeneratedException.cpp
+        src/exceptionns/GeneratedException.h
 )
 set_target_properties(igel PROPERTIES OUTPUT_NAME "igelCompiler")
 
@@ -52,11 +55,18 @@ separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
 llvm_map_components_to_libnames(llvm_libs support core irreader)
 
 # Link against LLVM libraries
-target_link_libraries(igel /usr/lib/libLLVM-17.so)
+#target_link_libraries(igel /usr/lib/libLLVM-17.so,/usr/lib/libstdc++exp.a)
 #target_link_libraries(igel ${llvm_libs})
 
+#target_link_libraries(igel /usr/lib/libstdc++exp.a)
+target_link_libraries(igel /usr/lib/libLLVM-17.so)
+
 SET(libSrcPr
-         srcLib/Array.cpp)
+        srcLib/Array.cpp
+        srcLib/Exception.cpp
+        srcLib/String.cpp
+        srcLib/String.h
+)
 
 add_library(libIg STATIC ${libSrcPr})
 set_target_properties(libIg PROPERTIES OUTPUT_NAME "igc")
@@ -66,5 +76,12 @@ set_target_properties( libIg
         LIBRARY_OUTPUT_DIRECTORY "./libs"
         RUNTIME_OUTPUT_DIRECTORY "./bin"
 )
+
+#target_link_libraries(igel PUBLIC "stdc++exp")
+target_link_options(igel PUBLIC "-fsized-deallocation")
+
+#add_link_options(libIg "LINKER:-lstdc++exp -fsized-deallocation")
+add_link_options(igel "LINKER:-lstdc++exp -fsized-deallocation")
+#add_link_options(igel_compiler "LINKER:-lstdc++exp -fsized-deallocation")
 #set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 #set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
